@@ -7,6 +7,8 @@ LIST OF CHANGES
    of product uqc
  - iseq_external_product_metrics - a new column to store product
    destination
+ - iseq_run_lane_metrics table - added columns to store per-lane
+   Illumina InterOp data
 
 release 6.6.0
  - add instrument_external_name column to the iseq_run_lane_metrics
